@@ -1,3 +1,9 @@
+2005-01-26  Andrew Cagney  <cagney@gnu.org>
+
+	* rs6000-tdep.c: Include "reggroups.h".
+	(rs6000_gdbarch_init): Set register_reggroup_p.
+	(rs6000_register_reggroup_p): New function.
+
 2005-01-26  Orjan Friberg  <orjanf@axis.com>
 
 	* cris-tdep.c (enum cris_num_regs, enum cris_regnums)
